# mcp-server-kicad

./: .gitignore  .mcp.json  CONTRIBUTING.md  README.md  RELEASE-NOTES.md  SECURITY.md  TODO.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: guard-kicad-files.cjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml  test.yml
agents/: bom-reviewer.md  code-reviewer.md  schematic-plan-reviewer.md
docs/superpowers/plans/: 2026-03-09-project-scaffolding-tools.md  2026-03-10-auto-junctions.md  2026-03-10-mcp-server-reorganization.md  2026-03-10-schematic-layout-plugin.md  2026-03-11-autoroute-pcb.md  2026-03-11-v050-refactoring.md  2026-03-12-post-autoroute-tools.md  2026-03-13-hierarchical-schematic-tools.md  2026-03-13-remove-hierarchical-sheet.md  2026-03-14-dsn-keepout-injection.md
docs/superpowers/specs/: 2026-03-09-project-scaffolding-tools-design.md  2026-03-10-mcp-server-reorganization-design.md  2026-03-10-schematic-layout-plugin-design.md  2026-03-11-autoroute-pcb-design.md  2026-03-11-skill-orchestration-redesign.md  2026-03-11-v050-refactoring-design.md  2026-03-12-post-autoroute-tools-design.md  2026-03-13-hierarchical-schematic-tools-design.md  2026-03-13-remove-hierarchical-sheet-design.md  2026-03-14-dsn-keepout-injection-design.md
hooks/: hooks.json  session-start
mcp_server_kicad/: __init__.py  __main__.py  _freerouting.py  _shared.py  export.py  footprint.py  models.py  pcb.py  project.py  schematic.py  server.py  symbol.py
skills/circuit-design/: SKILL.md
skills/pcb-layout/: SKILL.md
skills/schematic-design/: SKILL.md
skills/schematic-plan/: SKILL.md
skills/using-kicad/: SKILL.md
skills/verification/: SKILL.md
tests/: conftest.py  test_cli_analysis.py  test_cli_pcb_export.py  test_cli_sch_export.py  test_config.py  test_conftest_smoke.py  test_edge_cases.py  test_footprint_access_tools.py  test_freerouting.py  test_ipc2581_export.py  test_kicad_native.py  test_lib_access_tools.py  test_lib_tools.py  test_new_sch_tools.py  test_pcb_dxf_export.py  test_pcb_read_tools.py  test_pcb_write_tools.py  test_project_tools.py  test_read_tools.py  test_routing_tools.py  test_shared_helpers.py  test_skill_tool_coverage.py  test_skills.py  test_snap_grid_precision.py  test_symbol_access_tools.py  test_symbol_authoring_tools.py  test_tool_annotations.py  test_unified_server.py  test_write_tools.py
tests/fixtures/: kicad_native.kicad_sch
typings/kiutils/: board.pyi  dru.pyi  footprint.pyi  libraries.pyi  schematic.pyi  symbol.pyi  wks.pyi
typings/kiutils/items/: brditems.pyi  common.pyi  dimensions.pyi  fpitems.pyi  gritems.pyi  schitems.pyi  syitems.pyi  zones.pyi
typings/kiutils/misc/: config.pyi
typings/kiutils/utils/: sexpr.pyi  strings.pyi
