[project]
name = "mcp-server-kicad"
version = "0.1.0"
description = "MCP servers for KiCad schematic, PCB, and export automation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ProductOfAmerica" }]
keywords = ["mcp", "kicad", "eda", "schematic", "pcb", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.1.3,<2.0.0",
    "kiutils>=1.4",
]

[project.urls]
Homepage = "https://github.com/ProductOfAmerica/mcp-server-kicad"
Repository = "https://github.com/ProductOfAmerica/mcp-server-kicad"
Issues = "https://github.com/ProductOfAmerica/mcp-server-kicad/issues"

[project.scripts]
mcp-server-kicad-schematic = "mcp_server_kicad.schematic:main"
mcp-server-kicad-pcb = "mcp_server_kicad.pcb:main"
mcp-server-kicad-export = "mcp_server_kicad.export:main"

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff", "pyright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_kicad"]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
