[project]
name = "mcp-server-kicad"
version = "0.9.0"
description = "MCP servers for KiCad schematic, PCB, and export automation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ProductOfAmerica" }]
keywords = ["mcp", "kicad", "eda", "schematic", "pcb", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.1.3,<2.0.0",
    "kiutils>=1.4",
]

[project.urls]
Homepage = "https://github.com/ProductOfAmerica/mcp-server-kicad"
Repository = "https://github.com/ProductOfAmerica/mcp-server-kicad"
Issues = "https://github.com/ProductOfAmerica/mcp-server-kicad/issues"

[project.scripts]
mcp-server-kicad = "mcp_server_kicad.server:main"
mcp-server-kicad-schematic = "mcp_server_kicad.schematic:main"
mcp-server-kicad-pcb = "mcp_server_kicad.pcb:main"
mcp-server-kicad-symbol = "mcp_server_kicad.symbol:main"
mcp-server-kicad-footprint = "mcp_server_kicad.footprint:main"
mcp-server-kicad-project = "mcp_server_kicad.project:main"

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff", "pyright"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_kicad"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
markers = [
    "no_kicad_validation: skip kicad-cli parseability check (for tests that intentionally produce invalid files)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["typings"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
stubPath = "typings"
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
